--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,14 @@ body, ul {
     padding: 0;
 }
 
-header {
+.header-section {
     top: 79px;
     position: relative;
-    margin-bottom: 220px;
+    /*margin-bottom: 220px;*/
     background-image: url('../img/background.png');
     background-repeat: no-repeat;
-    background-size: 1920px 1080px;
-    background-position-y: -320px;
+    background-size: 9600px 1080px;
+    background-position-y: -300px;
     /*background: linear-gradient(180deg, #DBEBF4 50%, white 50%);*/
 }
 
@@ -51,8 +51,8 @@ img {
 }
 
 .into-img {
-    box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px;
+    box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
 }
 
 nav {
@@ -93,12 +93,17 @@ ul li {
 
 footer {
     text-align: center;
-    margin: 100px;
+    margin-top: 150px;
 }
 
 footer h2 {
     font-size: 50px;
     margin-bottom: 100px;
+}
+
+.email-link {
+    text-decoration: none;
+    color: black;
 }
 
 .button {
@@ -109,7 +114,7 @@ footer h2 {
     margin-top: 40px;
     display: inline-block;
     border-radius: 20px;
-    transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
+    transition: background 150ms ease-in-out, color 150ms ease-in-out;
 }
 
 .button:hover {
@@ -142,6 +147,10 @@ footer h2 {
     text-align: right;
 }
 
+.top-section {
+    margin: 0;
+}
+
 .empty {
     width: 90px;
     border-top: 1px solid black;
@@ -150,6 +159,24 @@ footer h2 {
 
 .padded {
     margin: 30px;
+}
+
+.padded-two {
+    padding: 0;
+    background-color: #DBEBF4;
+    margin: 0;
+}
+
+.divider {
+    margin-bottom: 280px;
+}
+
+.divider-two {
+    margin-bottom: 260px;
+}
+
+.blue-divider {
+    height: 79px;
 }
 
 html {
