--- a/css/styles.css
+++ b/css/styles.css
@@ -43,16 +43,22 @@ p {
 
 figcaption {
     font-size: 10px;
-    margin-top: 10px;
 }
 
 img {
     max-width: 100%;
 }
 
-.into-img {
+.intro-img {
     box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
+    height: 572px;
+    width: 425px;
+}
+
+.post-image {
+    height: 250px;
+    width: 450px;
 }
 
 nav {
