--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body, ul {
 .header-section {
     top: 79px;
     position: relative;
-    z-index: 9;
+    z-index: 1;
     /*margin-bottom: 220px;*/
     /*background-image: url('../img/background.png');
     background-repeat: no-repeat;
@@ -22,7 +22,7 @@ body, ul {
 .header-section:before {
     content: "";
     position: absolute;
-    z-index: -1;
+    z-index: 0;
 
     top: 0;
     right:0;
@@ -46,7 +46,7 @@ h1, h2 {
     font-weight: normal;
 }
 
-h1, h2, .skills-list {
+h1, h2 {
     font-family: 'Inknut Antiqua', serif;
 }
 
@@ -63,10 +63,13 @@ img {
 }
 
 .intro-img {
+    display: block;
     box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
-    height: 572px;
-    width: 425px;
+    height: auto;
+    width: auto;
+    max-height: 572px;
+    max-width: 425px;
 }
 
 .post-image {
@@ -77,7 +80,7 @@ img {
 nav {
     background-color: #DBEBF4;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
 }
 
@@ -141,13 +144,6 @@ footer h2 {
     color: white;
 }
 
-.skills-list {
-    text-align: center;
-    font-size: 50px;
-    line-height: 150%;
-    margin-bottom: 130px;
-}
-
 .project-section {
     margin-top: 30px;
     margin-bottom: 30px;
@@ -176,14 +172,12 @@ footer h2 {
     position: relative;
 }
 
-.padded {
+.padded, .intro-fig {
     margin: 30px;
 }
 
-.padded-two {
-    padding: 0;
-    background-color: #DBEBF4;
-    margin: 0;
+.intro-fig {
+    ;
 }
 
 .divider {
